Fix quiz.html contrast error

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -363,7 +363,8 @@ html{
     color: var(--clr-text-);
     font-size: 1.25rem;
     font-weight: 800;
-    background:linear-gradient(179deg, black, #120f0f);
+    /* background:linear-gradient((26deg, black, #222020)); */
+    background-color: #050505;
 }
 
 #userScore{
